Fix spacing for several pages

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -288,6 +288,7 @@ footer h3{
 
 /* LISTPROD */
 .listprod {
+    min-height: 60vh;
     margin-left: 30px;
     display: block;
     justify-content: center;
@@ -525,6 +526,7 @@ footer h3{
 
 /* ORDER */
 .order-checkout {
+    min-height: 60vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -569,6 +571,7 @@ footer h3{
 
 /* LIST ORDER */
 .listorder {
+    min-height: 60vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -648,12 +651,13 @@ footer h3{
 
 /* ADMIN ACTIONS */
 .admin-actions {
-    min-height: 60vh;
+    /* min-height: 60vh; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     padding: 0;
+    margin-bottom: 250px;
 }
 .all-actions {
     margin: 20px auto;
